clusters/home/apps/homepage/homepage/configs/homepage-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homepage-ingressroute
  namespace: homepage
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-clusterissuer
    gethomepage.dev/href: "https://homepage.homelab.rivetcode.com"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Homepage
    gethomepage.dev/group: Kubernetes
    gethomepage.dev/icon: homepage.png
    gethomepage.dev/app: homepage # optional, may be needed if app.kubernetes.io/name != ingress metadata.name
    gethomepage.dev/name: Gomepage
    gethomepage.dev/widget.type: "homepage"
    gethomepage.dev/widget.url: "https://homepage.homelab.rivetcode.com"
    gethomepage.dev/pod-selector: ""
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`homepage.homelab.rivetcode.com`)
    kind: Rule
    services:
    - name: homepage
      port: 3000
    middlewares:
      - name: authentik-service-middleware
        namespace: authentik
  tls:
    secretName: homepage-certificate-secret
